--- a/templates/management/index.html
+++ b/templates/management/index.html
@@ -13,7 +13,7 @@ $(document).ready(function() {
 {% block content %}
 <h1>Products</h1>
 {% if product_list %}
-    <table class="table table-striped table-condensed tablesorter" id="sortTable">
+    <table class="table table-bordered table-striped table-condensed tablesorter" id="sortTable">
     <thead>
     <tr>
     	<th>Type</th>
@@ -36,5 +36,32 @@ $(document).ready(function() {
     </table>
 {% else %}
     <p>No products are available.</p>
+{% endif %}
+
+<h3>Completed Products</h3>
+{% if completed_list %}
+    <table class="table table-bordered table-striped table-condensed tablesorter" id="sortTable">
+    <thead>
+    <tr>
+        <th>Type</th>
+        <th>Title</th>      
+        <th>Client</th>
+        <th>Due Date</th>
+        <th>Status</th>     
+    </tr>
+    </thead>
+    <tbody>
+    {% for product in completed_list %}
+    <tr>
+        <td>{{ product.product_type }}</td>
+        <td><a href="{% url "product-detail" product_id=product.id %}">{{ product.title }} {{ product.name }}</a></td>                
+        <td>{{ product.title.client }}</td>
+        <td>{{ product.due_date }}</td>
+        <td {% if product.status.color %}class='{{ product.status.color }}'{% endif %}>{{ product.status }}</td>
+    {% endfor %}
+    </tbody>   
+    </table>
+{% else %}
+    <p>No products are completed.</p>
 {% endif %}
 {% endblock %}
