--- a/templates/management/product.html
+++ b/templates/management/product.html
@@ -51,6 +51,7 @@ $(document).ready(function() {
     </tr>
 	{% endfor %}
 	</tbody>
+</table>
 {% else %}
     <p>No assets created.</p>
 {% endif %}
